TrainingDeveloperOrg/force-app/main/default/objects/Case/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cloned From</description>
    <label>Cloned From</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>