TrainingDeveloperOrg/force-app/main/default/objects/Case/fields/QA_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>QA_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>QA Reviewer</description>
    <label>QA Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>