TrainingDeveloperOrg/force-app/main/default/objects/Case/fields/Severity_Number__c.field-meta.xml
<CustomField>
    <fullName>Severity_Number__c</fullName>
    <description>Severity (Number)</description>
    <formula>VALUE(TEXT(Severity__c))</formula>
    <inlineHelpText>Severity (Number)</inlineHelpText>
    <label>Severity (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>