TrainingDeveloperOrg/force-app/main/default/objects/Case/validationRules/CASE001_Engineering_Req_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>CASE001_Engineering_Req_Numeric</fullName>
    <active>true</active>
    <description>Case validation rule that requires the Engineering Req Number field to be numeric.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(EngineeringReqNumber__c)),
    NOT(ISNUMBER(EngineeringReqNumber__c))
)</errorConditionFormula>
    <errorDisplayField>EngineeringReqNumber__c</errorDisplayField>
    <errorMessage>Engineering Req Field must be numeric [CASE001]</errorMessage>
</ValidationRule>